<resources>
    <string name="app_name">Apply Leave</string>
    <string name="leave_type">Leave Type</string>
    <string name="leave_count">Leave Count</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="inCharge">In Charge</string>
    <string name="supervisor">Supervisor</string>
    <string name="reason">Reason</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="selectHour">Select Hour</string>
</resources>
